fix styles on mobile nav menu

--- a/packages/prop-house-webapp/src/components/LocaleSwitcher/LocaleSwitcher.module.css
+++ b/packages/prop-house-webapp/src/components/LocaleSwitcher/LocaleSwitcher.module.css
@@ -2,13 +2,9 @@
   padding-top: 0.4rem;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 991px) {
   .langBtn {
-    margin: 0 !important;
-    padding: 0.5rem 0rem;
-  }
-  .langBtn button {
-    min-width: 80px !important;
+    padding-top: 0rem;
   }
 }
 
