--- a/packages/prop-house-webapp/src/components/NavBar/NavBar.module.css
+++ b/packages/prop-house-webapp/src/components/NavBar/NavBar.module.css
@@ -7,21 +7,11 @@
   .navbar {
     margin-bottom: 0.5rem;
   }
-  .navbar-nav .dropdown-menu {
-    position: absolute !important;
-    background: yellow !important;
-  }
 }
 
 .navBarCollapse {
   display: flex;
   align-items: center;
-}
-
-@media (max-width: 993px) {
-  .navBarCollapse {
-    margin-top: 15px;
-  }
 }
 
 .navbarBrand {
@@ -39,9 +29,8 @@
   border-radius: 10px !important;
 }
 
-@media (max-width: 993px) {
+@media (max-width: 991px) {
   .menuLink {
-    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     width: 100%;
     text-align: center;
@@ -61,19 +50,12 @@
 .buttonGroup {
   display: flex;
 }
-@media (max-width: 992px) {
-  .buttonGroup {
-    gap: 10px;
-    display: flex;
-    justify-content: space-between;
-  }
-}
 
 .divider {
   border: 1px solid rgba(0, 0, 0, 0.04);
   border-radius: 1px;
 }
-@media (min-width: 993px) {
+@media (min-width: 992px) {
   .link {
     margin-right: 0.75rem;
   }
@@ -86,6 +68,7 @@
     padding-right: 0rem !important;
   }
 }
+
 .poweredByNouns {
   color: var(--brand-black-transparent);
   font-weight: medium;
@@ -105,4 +88,48 @@
   display: flex;
   gap: 10px;
   align-items: center;
+}
+
+@media (min-width: 992px) {
+  .mobileButton,
+  .buttonGroup .divider {
+    display: none !important;
+  }
+}
+@media (max-width: 991px) {
+  .navBarCollapse {
+    width: 50%;
+    background: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.04);
+    box-shadow: 0px 2px 14px rgb(0 0 0 / 8%), 0px 6px 24px rgb(0 0 0 / 8%);
+    border-radius: 28px 8px 28px 28px;
+    padding: 18px;
+  }
+
+  .menuLink {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 23px;
+    margin-bottom: 0px;
+  }
+  .menuLink .link {
+    padding: 9px 10px 8px 0px;
+  }
+
+  .nav-link {
+    padding: 0rem !important;
+  }
+
+  .buttonGroup {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .navConnectButton button {
+    width: 100%;
+    margin-top: 12px !important;
+  }
 }
